Add V-Story Trailer

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
 v-story-introduction/V-Story_Profile_Chinese-bytom.pptx filter=lfs diff=lfs merge=lfs -text
+v-story-movie-trailer/V-Story[[:space:]]Play[[:space:]](cha).mp4 filter=lfs diff=lfs merge=lfs -text
